Fix spacing and change margins

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: auto;
 }
 
 .img-flex {
